--- a/monochromatic/monochromatic.html
+++ b/monochromatic/monochromatic.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dole Bananas</title>
+    <link rel="stylesheet" href="monochromatic.css">
 </head>
 <body>
-    
+    <div class="navbar">
+        <a href="#"><img src="https://www.dole.com/-/media/project/dole/brand/logo/brand-dole-logo-128p.png?h=128&w=194&rev=3438ffd054da4bc7a90e3c52fcf8cdd1&hash=1251A826E8D317DC51803F8EEDB3D3DA" alt="Logo" class="logo"></a>
+        <div class="nav-links">
+            <a href="#">About Us</a>
+            <a href="#">Recipes</a>
+            <a href="#">Farm Finder</a>
+        </div>
+    </div>
+
+    <main>
+        <div class="banner">
+            <div class="banner-image">
+                <img src="https://uploads.knightlab.com/storymapjs/17bac3dec857110426d3ca96f97d4e96/dole-bananas/_images/maxresdefault.jpg">
+            </div>
+            <div class="banner-bottom">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, dolorem.</p>
+            </div>
+        </div>
+
+        <div class="info">
+            <div class="info-1">
+                <img src="https://www.dole.com/-/media/project/dole/brand/campaign/pineapple-promo/5-2.png?h=512&la=en&w=512&rev=03b4f21f33174084be423538ab6d321f&hash=44D270CE79007CE271B449B717CD2FDB" class="image">
+                <div class="text">
+                    <h2>Something</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, ipsa officiis, magni velit modi quis nihil, natus eligendi voluptate sit in repellat nostrum rem illo iure quam distinctio pariatur dignissimos? In molestiae vero dolorem! Eveniet rem esse officiis itaque repellat!</p>
+                </div>
+            </div>
+            <div class="info-2">
+                <div class="text">
+                    <h2>Something</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quaerat ipsam, nulla quibusdam laudantium labore minima quod tenetur natus debitis, reprehenderit, non deleniti doloremque dolores placeat consectetur impedit pariatur unde delectus eos repudiandae eaque iste id enim. Soluta, beatae sunt.</p>
+                </div>
+                <img src="https://www.dole.com/-/media/project/dole/brand/campaign/125-years-of-bananas/promo-headers-v3_125-yrs-dole-bananaversary_1080x1080_q1.jpg?h=1080&la=en&w=1080&rev=3652d54510a14501aff4bff1cc0ba625&hash=32A73A40B09BCBCEB302CEFD19596ECA" class="image">
+            </div>
+            <div class="info-3">
+                <img src="https://www.dole.com/-/media/project/dole/brand/campaign/dole-whip-day/introdole-whip-day-web-headers_module-v1_720x720.jpg?h=720&la=en&w=720&rev=d6f7c4ef361c498b9b37c4c20c11ed3c&hash=047CCC7253A382CCB4ABFA9C1ACF8E26" class="image">
+                <div class="text">
+                    <h2>Something</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, id pariatur. A error ipsam sapiente! Ipsa, nihil nobis maiores exercitationem itaque dicta vero expedita animi aspernatur praesentium, minus quae aliquid ipsam aut accusantium. Adipisci error id totam dolores iusto nihil.</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
