--- a/triadic/triadic.html
+++ b/triadic/triadic.html
@@ -41,24 +41,24 @@
             </div>
         </div>
 
-        <div class="body">
+        <div class="info">
           <div class="info-1">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, quis officia? Cum rerum iusto laudantium quisquam dolore fugit repellat ipsa nulla, consequatur quae excepturi eum itaque magni obcaecati eligendi, totam sit. Perspiciatis accusamus voluptate repellendus assumenda inventore delectus, quidem dicta enim. Qui eos sapiente consequuntur quasi? Enim consequatur ex inventore doloremque. Unde, atque qui sunt reiciendis, dolores delectus ipsa rem obcaecati velit sed ab libero suscipit cum voluptate architecto veniam debitis. Corporis recusandae sed voluptates nisi autem similique voluptatibus tempore nihil earum quaerat ex est natus, quia, maxime provident, quod ipsam quisquam. Omnis aliquid praesentium, aut alias quisquam officia mollitia.</p>
-            <img src="https://m.media-amazon.com/images/I/71dwVIvBBoL.__AC_SY445_SX342_QL70_FMwebp_.jpg">
+            <p class="text-left">Lorem ekkekekekekekeakl;eak;klealkekleale klea;eakleakleak;eka;lekake k;e;ka;klkelak;aek k;eakl;ekak;eak el;kel;kak;le; ;kekl;ekle;</p>
+            <img src="https://m.media-amazon.com/images/I/71dwVIvBBoL.__AC_SY445_SX342_QL70_FMwebp_.jpg" class="image">
           </div>
 
           <div class="info-2">
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem aut ipsa ratione iusto. A accusantium suscipit asperiores quia debitis nemo eos eius, sunt corrupti praesentium veniam nesciunt ut pariatur, doloribus necessitatibus cum placeat delectus architecto deserunt itaque accusamus fuga. Non alias amet tempora dignissimos animi tempore ut porro impedit in, molestiae et deserunt esse eum iusto dolor, deleniti, soluta ab distinctio vitae rerum assumenda sit quidem. Repudiandae doloremque, adipisci voluptas, totam ipsam ipsa fugiat quis odit velit libero sunt commodi eum non! Enim rerum blanditiis nam omnis, explicabo, quo nemo, aliquam sit officia unde iure ducimus vitae perspiciatis repellendus ipsum voluptate aliquid nostrum quos. Quae velit magni non possimus eaque illo modi odio! Qui perferendis reiciendis, veritatis cum aspernatur sapiente nihil eveniet distinctio exercitationem explicabo delectus ratione minima soluta accusantium maxime esse quidem? Rerum aliquid quae animi possimus voluptatem quas tempora! Repellendus ea possimus ducimus vitae exercitationem aspernatur, excepturi error earum tempore ipsum perferendis asperiores ut fuga expedita. Dolore doloribus iusto quis in consequuntur sint repudiandae odio id accusamus optio!
+            <p class="text-left">
+              Lorem ekkekekekekekeakl;eak;klealkekleale klea;eakleakleak;eka;lekake k;e;ka;klkelak;aek k;eakl;ekak;eak el;kel;kak;le; ;kekl;ekle;
             </p>
-            <img src="https://m.media-amazon.com/images/I/71YrRrxPGIL._AC_SX679_PIbundle-2,TopRight,0,0_SH20_.jpg">
+            <img src="https://m.media-amazon.com/images/I/71YrRrxPGIL._AC_SX679_PIbundle-2,TopRight,0,0_SH20_.jpg" class="image"/>
           </div>
 
           <div class="info-3">
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda praesentium dolorum adipisci expedita modi illum enim corrupti doloremque quis perspiciatis impedit tenetur quasi sunt, vitae dicta quae quia cupiditate, eaque porro ducimus qui ipsum. Ipsa nihil error ullam soluta nisi, modi a repudiandae reiciendis eaque labore nulla quidem consequuntur sit iure omnis nemo, exercitationem similique! Dolore, natus eum, laborum ipsa asperiores dolorem incidunt nobis excepturi dignissimos porro, numquam ratione! Qui adipisci accusamus quia nihil velit maxime consequatur impedit ut ex corrupti quos odio, veniam, voluptatum dicta porro? Excepturi aliquam consequuntur officia, veritatis nam tempora dolores labore numquam explicabo accusantium doloremque deserunt ratione illum soluta ex, suscipit qui modi dolore, rem molestias veniam. Cupiditate voluptates nesciunt voluptatum atque totam corporis perferendis repudiandae molestiae quibusdam, illum dolorum.
+            <p class="text-left">
+              Lorem ekkekekekekekeakl;eak;klealkekleale klea;eakleakleak;eka;lekake k;e;ka;klkelak;aek k;eakl;ekak;eak el;kel;kak;le; ;kekl;ekle;
             </p>
-            <img src="https://m.media-amazon.com/images/I/71fKoT0IJML._AC_UF894,1000_QL80_.jpg">
+            <img src="https://m.media-amazon.com/images/I/71fKoT0IJML._AC_UF894,1000_QL80_.jpg" class="image" style = "image">
           </div>
         </div>
     </main>
@@ -71,7 +71,7 @@
             <a href="https://instagram.com" target="_blank" aria-label="Instagram">
               <i class="fa-brands fa-instagram"></i>
             </a>
-            <h2 class="company-name">DOLE PLANTATION INC.</h2>
+            <h2 class="company-name">RGB LIGHT SHOP</h2>
             <a href="https://youtube.com" target="_blank" aria-label="YouTube">
               <i class="fa-brands fa-youtube"></i>
             </a>
