--- a/websites/analogous.html
+++ b/websites/analogous.html
@@ -1,24 +1,33 @@
+<!--
+The analogous color scheme, starting with light blue and extending to light pink and pink, creates a soft and harmonious visual experience. This palette is perfect for a site about cupcakes as it evokes feelings of sweetness, playfulness, and warmth, making the viewer feel welcome and enticed by the delightful treats on display.
+
+The light blue, light pink, and pink analogous color scheme beautifully complements the cupcake theme, offering a playful and inviting aesthetic that reflects the sweetness and joy of the desserts.
+-->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dole Bananas</title>
-    <link rel="stylesheet" href="monochromatic.css" />
+    <title>Sunny Slope Cupcakes</title>
+    <link rel="stylesheet" href="analogous.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="shortcut icon" href="dole.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
   </head>
   <body>
     <div class="navbar">
-      <img class="logo" src="dole.png" alt="Logo" />
+      <img class="logo" src="logo.png" alt="Logo" />
 
       <div class="nav-links">
         <a href="#">About Us</a>
         <a href="#">Recipes</a>
-        <a href="#">Farm Finder</a>
+        <a href="./triadic.html">RGB (TRIADIC)</a>
+        <a href="./monochromatic.html">DOLE (MONOCHROMATIC)</a>
       </div>
 
       <div class="menu-toggle" id="mobile-menu">
@@ -36,18 +45,18 @@
       <div class="banner">
         <div class="banner-image">
           <img
-            src="https://uploads.knightlab.com/storymapjs/17bac3dec857110426d3ca96f97d4e96/dole-bananas/_images/maxresdefault.jpg"
+            src="https://images3.alphacoders.com/801/801778.jpg"
           />
         </div>
         <div class="banner-bottom">
-          <p>Bringing bananas to you, from Dole to Dole</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, sit.</p>
         </div>
       </div>
 
       <div class="info">
         <div class="info-1">
           <img
-            src="https://www.dole.com/-/media/project/dole/brand/campaign/pineapple-promo/5-2.png?h=512&la=en&w=512&rev=03b4f21f33174084be423538ab6d321f&hash=44D270CE79007CE271B449B717CD2FDB"
+            src="https://th.bing.com/th/id/R.a075c8f0f9c308e5f025e3b0e51bed9f?rik=24XXveMIqSkVKg&riu=http%3a%2f%2f4.bp.blogspot.com%2f-TgxnxZy2EjY%2fTkiN1LyiTmI%2fAAAAAAAACKk%2fI_8zxxVPKPc%2fs1600%2fIMG_6155csqs.jpg&ehk=0SPWBbzqYsuXrwHWP%2biGA3SJxRqn3Z7yiYXRWdo%2bDGY%3d&risl=&pid=ImgRaw&r=0"
             class="image"
           />
           <div class="text-right">
@@ -73,13 +82,13 @@
             </p>
           </div>
           <img
-            src="https://www.dole.com/-/media/project/dole/brand/campaign/125-years-of-bananas/promo-headers-v3_125-yrs-dole-bananaversary_1080x1080_q1.jpg?h=1080&la=en&w=1080&rev=3652d54510a14501aff4bff1cc0ba625&hash=32A73A40B09BCBCEB302CEFD19596ECA"
+            src="https://th.bing.com/th/id/OIP.PRXIUEACYdqwMwj2M4ag9QHaHa?rs=1&pid=ImgDetMain"
             class="image"
           />
         </div>
         <div class="info-3">
           <img
-            src="https://www.dole.com/-/media/project/dole/brand/campaign/dole-whip-day/introdole-whip-day-web-headers_module-v1_720x720.jpg?h=720&la=en&w=720&rev=d6f7c4ef361c498b9b37c4c20c11ed3c&hash=047CCC7253A382CCB4ABFA9C1ACF8E26"
+            src="https://th.bing.com/th/id/R.841a45aadfbd45b56f6857f748e472de?rik=ms8rck0WJZpXhw&pid=ImgRaw&r=0"
             class="image"
           />
           <div class="text-right">
@@ -104,7 +113,7 @@
         <a href="https://instagram.com" target="_blank" aria-label="Instagram">
           <i class="fa-brands fa-instagram"></i>
         </a>
-        <h2 class="company-name">DOLE PLANTATION INC.</h2>
+        <h2 class="company-name">SUNNY SLOPE CUPCAKES</h2>
         <a href="https://youtube.com" target="_blank" aria-label="YouTube">
           <i class="fa-brands fa-youtube"></i>
         </a>
