--- a/websites/triadic.html
+++ b/websites/triadic.html
@@ -1,3 +1,12 @@
+<!--
+The triadic color scheme of red, green, and blue works well for a site about RGB lights because it creates a bold and balanced visual experience. These three evenly spaced colors on the color wheel are vibrant and attention-grabbing, perfectly reflecting the dynamic and colorful nature of RGB lighting systems. This palette conveys creativity, excitement, and modernity, aligning with the essence of light technology.
+
+The triadic color scheme of red, green, and blue embodies the dynamic and balanced energy of RGB lights, capturing the spirit of creativity, excitement, and modern innovation.
+-->
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +27,8 @@
       <div class="nav-links">
         <a href="#">About Us</a>
         <a href="#">Recipes</a>
-        <a href="#">Farm Finder</a>
+        <a href="./analogous.html">CUPCAKES (ANALOGOUS)</a>
+        <a href="./monochromatic.html">DOLE (MONOCHROMATIC)</a>
       </div>
 
       <div class="menu-toggle" id="mobile-menu">
